--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
     <title>BTP Solution</title>
 </head>
 <body>
@@ -11,7 +15,7 @@
         <header>
             <img src="images/photos/Logo.png" alt="Logo">
             <nav>
-                <ul>
+                <ul class="nav">
                     <li><a href="#home">Accueil</a></li>
                     <li><a href="#service">Services</a></li>
                     <li><a href="#about">A propos</a></li>
@@ -128,16 +132,16 @@
                     <h3>Ou remplir le formulaire :</h3>
                     <div class="top">
                         <div>
-                            <label for="name">Nom</label>
+                            <label for="name">Nom*</label>
                             <input type="text" name="Nom Complet" id="name" placeholder="Entrez votre nom complet" required>
                         </div>
                         <div>
-                            <label for="mail">Email</label>
+                            <label for="mail">Email*</label>
                             <input type="email" name="Email" id="mail" placeholder="Entrez votre adresse email" required>
                         </div>
                     </div>
                     <div>
-                        <label for="message">Message</label>
+                        <label for="message">Message*</label>
                         <textarea name="Message" id="message" placeholder="Que voulez vous nous dire?"></textarea>
                     </div>
                     <button type="submit">Envoyer</button>
