--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
             </div>
         </section>
 
-        <section class="contact">
+        <section class="contact" id="contact">
             <h2><span>CONTACTEZ</span> NOUS</h2>
             <p>Vous souhaitez un renseignement ou avez une remarque à formuler ? Nous sommes à votre écoute.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5366763.921557032!2d-6.8939208984374964!3d48.94415123418795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e668d7ecd10e25%3A0x3bdd8c1aaf987b9c!2sAximum%20-%20Travaux%20%26%20Services!5e0!3m2!1sfr!2s!4v1718714509950!5m2!1sfr!2s" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <div class="contact-direct" id="contact">
+            <div class="contact-direct">
                 <div class="ct-left">
                     <p>Par email : contact@btpsolutions.com</p>
                     <p>Par téléphone : +123 456 7890</p>
-                    <p>Nos différents locaux :</p>
-                    <p>Paris, Île-de-France, France <br>Marseille, Île-de-France, France <br> Nanterre, Île-de-France, France</p>
+                    <p>Nos différentes adresses :</p>
+                    <p>1234 Rue de la construction, 70001 Paris, France<br>Marseille, Île-de-France, France <br> Nanterre, Île-de-France, France</p>
                     <p>Du lundi au vendredi 9h00-19h00.<br>14h00-16h00 – Samedi sur rendez-vous.</p>
                 </div>
                 <form action="#" id="formul">
@@ -170,8 +170,10 @@
                 </div>
                 <div class="foot3">
                     <h3>Abonnez-vous à notre newsletter :</h3>
-                    <input type="email" name="Email" placeholder="Adresse mail">
-                    <button type="submit">Joindre</button>
+                    <div>
+                        <input type="email" name="Email" placeholder="Adresse mail">
+                        <button type="submit">Joindre</button>
+                    </div>
                 </div>
             </div>
             <div class="foot-bottom">
