--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             <div class="service">
                 <div class="serv">
-                    <img src="images/photos/service-1.png" alt="service">
+                    <img src="images/photos/service-1.webp" alt="service">
                     <div>
                         <h3>Construction de bâtiments</h3>
                         <p>Des constructions robustes et esthétiques pour tous vos besoins résidentiels, commerciaux et industriels.</p>
@@ -53,14 +53,14 @@
                     
                 </div>
                 <div class="serv">
-                    <img src="images/photos/service-2.png" alt="service">
+                    <img src="images/photos/service-2.webp" alt="service">
                     <div>
                         <h3>Travaux publics</h3>
                         <p>Des infrastructures publiques fiables et durables, incluant routes, ponts et aménagements urbains.</p>
                     </div>
                 </div>
                 <div class="serv">
-                    <img src="images/photos/service-3.png" alt="service">
+                    <img src="images/photos/service-3.webp" alt="service">
                     <div>
                         <h3>Rénovation et réhabilitation</h3>
                         <p>Redonnez vie à vos bâtiments avec nos solutions de rénovation complètes et innovantes.</p>
