--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="BTP Solutions est une entreprise de Bâtiment et Travaux Publics dédiée à la réalisation de projets d'infrastructures de haute qualité.">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js" defer></script>
     <title>BTP Solution</title>
@@ -116,7 +117,7 @@
         <section class="contact" id="contacter">
             <h2><span>CONTACTEZ</span> NOUS</h2>
             <p>Vous souhaitez un renseignement ou avez une remarque à formuler ? Nous sommes à votre écoute.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5366763.921557032!2d-6.8939208984374964!3d48.94415123418795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e668d7ecd10e25%3A0x3bdd8c1aaf987b9c!2sAximum%20-%20Travaux%20%26%20Services!5e0!3m2!1sfr!2s!4v1718714509950!5m2!1sfr!2s" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5366763.921557032!2d-6.8939208984374964!3d48.94415123418795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e668d7ecd10e25%3A0x3bdd8c1aaf987b9c!2sAximum%20-%20Travaux%20%26%20Services!5e0!3m2!1sfr!2s!4v1718714509950!5m2!1sfr!2s" title="adresse map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="contact-direct">
                 <div class="ct-left">
                     <p>Par email : contact@btpsolutions.com</p>
